tests/compile_fail/effectful_transform_raw_handler.stderr
error[E0277]: `RawTransform` does not satisfy `EffectfulTransformHandler` for this stage
  --> tests/compile_fail/effectful_transform_raw_handler.rs:46:13
   |
46 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
47 | |         Input -> First => RawTransform,
48 | |         effects: [],
49 | |         middleware: []
50 | |     );
   | |_____^ this handler does not match the effectful transform contract
   |
help: the trait `EffectfulTransformHandler` is not implemented for `RawTransform`
  --> tests/compile_fail/effectful_transform_raw_handler.rs:27:1
   |
27 | struct RawTransform;
   | ^^^^^^^^^^^^^^^^^^^
   = note: implement `EffectfulTransformHandler` with `Input`, `Output`, `AllowedEffects`, and `process`; `Input` must match the arrow input, while `Output` and `AllowedEffects` mirror the canonical arrow and `effects:` clause (FLOWIP-120z B9)
help: the following other types implement trait `EffectfulTransformHandler`
  --> crates/obzenflow_adapters/src/ai/effects/map_reduce_generated.rs
   |
   | / impl<Item, Partial, Role> EffectfulTransformHandler for GeneratedAiMapHandler<Item, Partial, Role>
   | | where
   | |     Item: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Partial: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiMapRole<Item, Partial>,
   | |___________________________________^ `GeneratedAiMapHandler<Item, Partial, Role>`
...
   | / impl<Seed, Collected, Out, Role> EffectfulTransformHandler
   | |     for GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>
   | | where
   | |     Seed: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Collected: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Out: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiFinaliseRole<Seed, Collected, Out>,
   | |_______________________________________________^ `GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>`
note: required by a bound in `__obzenflow_assert_effectful_transform_contract`
  --> tests/compile_fail/effectful_transform_raw_handler.rs:46:13
   |
46 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
47 | |         Input -> First => RawTransform,
48 | |         effects: [],
49 | |         middleware: []
50 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_effectful_transform_contract`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_transform_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `RawTransform` does not satisfy `EffectfulTransformHandler` for this stage
  --> tests/compile_fail/effectful_transform_raw_handler.rs:46:13
   |
46 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
47 | |         Input -> First => RawTransform,
48 | |         effects: [],
49 | |         middleware: []
50 | |     );
   | |_____^ this handler does not match the effectful transform contract
   |
help: the trait `EffectfulTransformHandler` is not implemented for `RawTransform`
  --> tests/compile_fail/effectful_transform_raw_handler.rs:27:1
   |
27 | struct RawTransform;
   | ^^^^^^^^^^^^^^^^^^^
   = note: implement `EffectfulTransformHandler` with `Input`, `Output`, `AllowedEffects`, and `process`; `Input` must match the arrow input, while `Output` and `AllowedEffects` mirror the canonical arrow and `effects:` clause (FLOWIP-120z B9)
help: the following other types implement trait `EffectfulTransformHandler`
  --> crates/obzenflow_adapters/src/ai/effects/map_reduce_generated.rs
   |
   | / impl<Item, Partial, Role> EffectfulTransformHandler for GeneratedAiMapHandler<Item, Partial, Role>
   | | where
   | |     Item: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Partial: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiMapRole<Item, Partial>,
   | |___________________________________^ `GeneratedAiMapHandler<Item, Partial, Role>`
...
   | / impl<Seed, Collected, Out, Role> EffectfulTransformHandler
   | |     for GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>
   | | where
   | |     Seed: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Collected: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Out: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiFinaliseRole<Seed, Collected, Out>,
   | |_______________________________________________^ `GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>`
note: required by a bound in `EffectfulTransformDescriptor`
  --> crates/obzenflow_dsl/src/dsl/stage_descriptor.rs
   |
   | pub struct EffectfulTransformDescriptor<H: EffectfulTransformHandler + 'static> {
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EffectfulTransformDescriptor`
   = note: this error originates in the macro `$crate::__obzenflow_effectful_transform_typed` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `RawTransform` does not satisfy `EffectfulTransformHandler` for this stage
  --> tests/compile_fail/effectful_transform_raw_handler.rs:46:13
   |
46 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
47 | |         Input -> First => RawTransform,
48 | |         effects: [],
49 | |         middleware: []
50 | |     );
   | |_____^ this handler does not match the effectful transform contract
   |
help: the trait `EffectfulTransformHandler` is not implemented for `RawTransform`
  --> tests/compile_fail/effectful_transform_raw_handler.rs:27:1
   |
27 | struct RawTransform;
   | ^^^^^^^^^^^^^^^^^^^
   = note: implement `EffectfulTransformHandler` with `Input`, `Output`, `AllowedEffects`, and `process`; `Input` must match the arrow input, while `Output` and `AllowedEffects` mirror the canonical arrow and `effects:` clause (FLOWIP-120z B9)
help: the following other types implement trait `EffectfulTransformHandler`
  --> crates/obzenflow_adapters/src/ai/effects/map_reduce_generated.rs
   |
   | / impl<Item, Partial, Role> EffectfulTransformHandler for GeneratedAiMapHandler<Item, Partial, Role>
   | | where
   | |     Item: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Partial: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiMapRole<Item, Partial>,
   | |___________________________________^ `GeneratedAiMapHandler<Item, Partial, Role>`
...
   | / impl<Seed, Collected, Out, Role> EffectfulTransformHandler
   | |     for GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>
   | | where
   | |     Seed: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Collected: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Out: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiFinaliseRole<Seed, Collected, Out>,
   | |_______________________________________________^ `GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>`
note: required by a bound in `EffectfulTransformDescriptor`
  --> crates/obzenflow_dsl/src/dsl/stage_descriptor.rs
   |
   | pub struct EffectfulTransformDescriptor<H: EffectfulTransformHandler + 'static> {
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EffectfulTransformDescriptor`
   = note: this error originates in the macro `$crate::__obzenflow_effectful_transform_untyped` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `RawTransform` does not satisfy `EffectfulTransformHandler` for this stage
  --> tests/compile_fail/effectful_transform_raw_handler.rs:46:13
   |
46 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
47 | |         Input -> First => RawTransform,
48 | |         effects: [],
49 | |         middleware: []
50 | |     );
   | |_____^ this handler does not match the effectful transform contract
   |
help: the trait `EffectfulTransformHandler` is not implemented for `RawTransform`
  --> tests/compile_fail/effectful_transform_raw_handler.rs:27:1
   |
27 | struct RawTransform;
   | ^^^^^^^^^^^^^^^^^^^
   = note: implement `EffectfulTransformHandler` with `Input`, `Output`, `AllowedEffects`, and `process`; `Input` must match the arrow input, while `Output` and `AllowedEffects` mirror the canonical arrow and `effects:` clause (FLOWIP-120z B9)
help: the following other types implement trait `EffectfulTransformHandler`
  --> crates/obzenflow_adapters/src/ai/effects/map_reduce_generated.rs
   |
   | / impl<Item, Partial, Role> EffectfulTransformHandler for GeneratedAiMapHandler<Item, Partial, Role>
   | | where
   | |     Item: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Partial: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiMapRole<Item, Partial>,
   | |___________________________________^ `GeneratedAiMapHandler<Item, Partial, Role>`
...
   | / impl<Seed, Collected, Out, Role> EffectfulTransformHandler
   | |     for GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>
   | | where
   | |     Seed: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Collected: serde::Serialize + serde::de::DeserializeOwned + Clone + Send + Sync + 'static,
   | |     Out: TypedPayload + Clone + Send + Sync + 'static,
   | |     Role: AiFinaliseRole<Seed, Collected, Out>,
   | |_______________________________________________^ `GeneratedAiFinaliseHandler<Seed, Collected, Out, Role>`
note: required by a bound in `EffectfulTransformDescriptor`
  --> crates/obzenflow_dsl/src/dsl/stage_descriptor.rs
   |
   | pub struct EffectfulTransformDescriptor<H: EffectfulTransformHandler + 'static> {
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EffectfulTransformDescriptor`
   = note: this error originates in the macro `$crate::__obzenflow_effectful_transform_untyped` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)
